# minitrade

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  index.html  install.md  mkdocs.yml  mtctl.sh  objects.inv  pyproject.toml  restart.sh
.github/workflows/: build_docs.yml  ci.yml  test_code.yml  test_external.yml  test_install.yml  test_src.yml
api_backtest/: index.html
api_broker/: index.html
api_datasource/: index.html
backtest/: index.html
backtesting/: index.html
broker/: index.html
cli/: index.html
compatibility/: index.html
contributing/: index.html
datasource/: index.html
doc/examples/: Multiple Time Frames.ipynb  Parameter Heatmap & Optimization.ipynb  Quick Start User Guide.ipynb  README.md  Strategies Library.ipynb  Trading with Machine Learning.ipynb
docs/: api_backtest.md  api_datasource.md  backtest.md  backtesting.md  broker.md  cli.md  compatibility.md  contributing.md  datasource.md  index.md  install.md  introduction.md  strategy.md  trader.md  trading.md
docs/examples/: Multiple Time Frames.ipynb  Parameter Heatmap & Optimization.ipynb  Quick Start User Guide.ipynb  README.md  Strategies Library.ipynb  Trading with Machine Learning.ipynb
examples/: index.html
examples/Multiple Time Frames/: index.html
examples/Parameter Heatmap & Optimization/: index.html
examples/Quick Start User Guide/: index.html
examples/Strategies Library/: index.html
examples/Trading with Machine Learning/: index.html
install/: index.html
minitrade/: cli.py  minitrade.db.sql
minitrade/admin/: Home.py
minitrade/admin/pages/: 1_Trading.py  2_Strategy.py  3_Datasource.py  4_Broker.py  5_Logs.py  5_Task.py  6_Log.py  6_Settings.py  7_Settings.py  8_Fred.py
minitrade/backtest/: __init__.py  backtest.py  indicator.py  utils.py
minitrade/backtest/core/: __init__.py  _plotting.py  _stats.py  _util.py  backtesting.py  lib.py
minitrade/backtest/core/test/: __init__.py  __main__.py  _test.py
minitrade/broker/: __init__.py  base.py  ib.py  ibgateway.py  manual.py
minitrade/datasource/: __init__.py  alpaca.py  base.py  cboe_futures.py  cboe_index.py  eastmoney.py  eodhd.py  ib.py  tiingo.py  twelve.py  union.py  yahoo.py
minitrade/trader/: __init__.py  scheduler.py  trader.py
minitrade/trader/schema/: 0.1.28.sql  0.1.29.sql  0.1.30.sql  0.1.32.sql  0.1.34.sql  0.1.36.sql  consolidated.sql
minitrade/utils/: config.py  convert.py  mailjet.py  misc.py  mtdb.py  providers.py  telegram.py
search/: search_index.json
strategy/: index.html
tasks/: db_cleanup.py  ib_eod_download.py  ib_login_reminder.py
tests/: README.md  fixture.py  test_backtest.py  test_broker.py  test_datasource.py  test_strategy.py  test_trader.py
tests/strategy/: rotate_buying.py  storage_test.py
trader/: index.html
trading/: index.html
