[tool.poetry]
name = "minitrade"
version = "0.1.27"
description = "A personal automated trading system"
authors = ["Wei Wu <dodid@outlook.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dodid/minitrade"
homepage = "https://dodid.github.io/minitrade/"
keywords = ["finance", "investing", "trading", "algorithmic-trading", "backtesting", "backtesting-frameworks", "interactive-brokers"]


[tool.poetry.dependencies]
python = "~3.10"
streamlit = "^1.26.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
apscheduler = "^3.10.4"
watchdog = "^2.3.1"
pandas-ta = "^0.3.14b"
bokeh = "^3.2.2"
yfinance = "^0.2.28"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
tqdm = "^4.66.1"
pydantic = "^2.3.0"
nanoid = "^2.0.0"
fastapi = {extras = ["all"], version = "^0.103.1"}
requests = "^2.31.0"
selenium = "^4.12.0"
psutil = "^5.9.5"
pyyaml = "^6.0.1"
pypika = "^0.48.9"
click = "^8.1.7"
mailjet-rest = "^1.3.4"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
minitrade-scikit-optimize = "^0.9.2"
python-telegram-bot = {extras = ["socks"], version = "^20.5"}
akshare = "^1.11.1"
pandas-market-calendars = "^4.3.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pytest = "^7.4.2"
jupyter = "^1.0.0"
notebook = "^6.5.5"
vprof = "^0.38"
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^8.5.11"
mkdocs-click = "^0.8.0"
mkdocs-jupyter = "^0.22.0"
pytest-cov = "^4.1.0"
jupyterlab = "^3.6.5"


[tool.poetry.scripts]
minitrade = 'minitrade.cli:mtcli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
