[tool.poetry]
name = "minitrade"
version = "0.1.35"
description = "A personal automated trading system"
authors = ["Wei Wu <dodid@outlook.com>"]
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/dodid/minitrade"
homepage = "https://dodid.github.io/minitrade/"
keywords = ["finance", "investing", "trading", "algorithmic-trading", "backtesting", "backtesting-frameworks", "interactive-brokers"]


[tool.poetry.dependencies]
python = "^3.10, <3.13"
streamlit = "^1.27.0"
pandas = "^2.1.1"
numpy = "^1.26.0"
apscheduler = "^3.10.4"
watchdog = "^2.3.1"
pandas-ta = "^0.3.14b"
bokeh = "^3.2.2"
yfinance = "^0.2.30"
matplotlib = "^3.8.0"
seaborn = "^0.13"
tqdm = "^4.66.1"
pydantic = "^2.4.0"
nanoid = "^2.0.0"
fastapi = {extras = ["all"], version = "^0.103.1"}
requests = "^2.31.0"
selenium = "^4.13.0"
psutil = "^5.9.5"
pyyaml = "^6.0.1"
pypika = "^0.48.9"
click = "^8.1.7"
mailjet-rest = "^1.3.4"
scikit-learn = "^1.3.1"
scipy = "^1.11.2"
minitrade-scikit-optimize = "^0.9.2"
python-telegram-bot = {extras = ["socks"], version = "^20.5"}
akshare = "^1.11.16"
pandas-market-calendars = "^4.3.1"
dill = "^0.3.7"
statsmodels = "^0.14.0"
eodhd = "^1.0.27"
twelvedata = "^1.2.12"
alpaca-py = "^0.13.2"
fredapi = "^0.5.1"
quantstats = "^0.0.62"
ipython = "^8.19.0"
ipywidgets = "^8.1.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
pytest = "^7.4.2"
notebook = "^7"
vprof = "^0.38"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^8.5.11"
mkdocs-click = "^0.8.1"
mkdocs-jupyter = "^0.22.0"
pytest-cov = "^4.1.0"
jupyterlab = "^4"


[tool.poetry.scripts]
minitrade = 'minitrade.cli:mtcli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
